--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@
 @theme {
   --breakpoint-xxs: 375px;
   --breakpoint-xs: 480px;
+  --breakpoint-sm: 640px;
+  --breakpoint-md: 768px;
+  --breakpoint-lg: 1024px;
+  --breakpoint-lg: 1280px;
+  --breakpoint-2xl: 1440px;
 
   --max-width-base: 1567px;
 
