--- a/public/style.css
+++ b/public/style.css
@@ -33,9 +33,7 @@
     --font-weight-extrabold: 800;
     --font-weight-black: 900;
     --radius-2xl: 1rem;
-    --radius-3xl: 1.5rem;
     --blur-2xl: 40px;
-    --aspect-video: 16 / 9;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
@@ -57,7 +55,7 @@
     #f1c464 52.4%,
     #d6ad4f 100%
   );
-    --background-image-union: url("/public/assets/images/union.png");
+    --background-image-union: url("./public/assets/images/union.png");
   }
 }
 @layer base {
@@ -221,9 +219,6 @@
   .top-10 {
     top: calc(var(--spacing) * 10);
   }
-  .top-16 {
-    top: calc(var(--spacing) * 16);
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
@@ -248,23 +243,14 @@
   .mx-auto {
     margin-inline: auto;
   }
-  .my-45 {
-    margin-block: calc(var(--spacing) * 45);
-  }
   .my-auto {
     margin-block: auto;
   }
   .-mt-8 {
     margin-top: calc(var(--spacing) * -8);
   }
-  .-mt-20 {
-    margin-top: calc(var(--spacing) * -20);
-  }
   .mt-2 {
     margin-top: calc(var(--spacing) * 2);
-  }
-  .mt-3 {
-    margin-top: calc(var(--spacing) * 3);
   }
   .mt-3\.5 {
     margin-top: calc(var(--spacing) * 3.5);
@@ -277,9 +263,6 @@
   }
   .mt-9 {
     margin-top: calc(var(--spacing) * 9);
-  }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
   }
   .mt-\[140px\] {
     margin-top: 140px;
@@ -309,16 +292,6 @@
   .hidden {
     display: none;
   }
-  .table {
-    display: table;
-  }
-  .aspect-video {
-    aspect-ratio: var(--aspect-video);
-  }
-  .size-4 {
-    width: calc(var(--spacing) * 4);
-    height: calc(var(--spacing) * 4);
-  }
   .size-4\.25 {
     width: calc(var(--spacing) * 4.25);
     height: calc(var(--spacing) * 4.25);
@@ -331,25 +304,13 @@
     width: calc(var(--spacing) * 10);
     height: calc(var(--spacing) * 10);
   }
-  .size-18 {
-    width: calc(var(--spacing) * 18);
-    height: calc(var(--spacing) * 18);
-  }
   .size-18\.75 {
     width: calc(var(--spacing) * 18.75);
     height: calc(var(--spacing) * 18.75);
   }
-  .size-26 {
-    width: calc(var(--spacing) * 26);
-    height: calc(var(--spacing) * 26);
-  }
   .size-32 {
     width: calc(var(--spacing) * 32);
     height: calc(var(--spacing) * 32);
-  }
-  .size-59 {
-    width: calc(var(--spacing) * 59);
-    height: calc(var(--spacing) * 59);
   }
   .size-full {
     width: 100%;
@@ -361,35 +322,14 @@
   .h-8 {
     height: calc(var(--spacing) * 8);
   }
-  .h-10 {
-    height: calc(var(--spacing) * 10);
-  }
   .h-12 {
     height: calc(var(--spacing) * 12);
-  }
-  .h-14 {
-    height: calc(var(--spacing) * 14);
   }
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
-  .h-20 {
-    height: calc(var(--spacing) * 20);
-  }
-  .h-22 {
-    height: calc(var(--spacing) * 22);
-  }
   .h-38 {
     height: calc(var(--spacing) * 38);
-  }
-  .h-40 {
-    height: calc(var(--spacing) * 40);
-  }
-  .h-45 {
-    height: calc(var(--spacing) * 45);
-  }
-  .h-45\.5 {
-    height: calc(var(--spacing) * 45.5);
   }
   .h-\[68px\] {
     height: 68px;
@@ -397,20 +337,11 @@
   .h-\[475px\] {
     height: 475px;
   }
-  .h-\[1046px\] {
-    height: 1046px;
-  }
   .h-px {
     height: 1px;
   }
   .max-h-\[47\.5rem\] {
     max-height: 47.5rem;
-  }
-  .w-5 {
-    width: calc(var(--spacing) * 5);
-  }
-  .w-12 {
-    width: calc(var(--spacing) * 12);
   }
   .w-14 {
     width: calc(var(--spacing) * 14);
@@ -424,9 +355,6 @@
   .w-22 {
     width: calc(var(--spacing) * 22);
   }
-  .w-23 {
-    width: calc(var(--spacing) * 23);
-  }
   .w-24 {
     width: calc(var(--spacing) * 24);
   }
@@ -436,26 +364,11 @@
   .w-26 {
     width: calc(var(--spacing) * 26);
   }
-  .w-32 {
-    width: calc(var(--spacing) * 32);
-  }
-  .w-41 {
-    width: calc(var(--spacing) * 41);
-  }
-  .w-119 {
-    width: calc(var(--spacing) * 119);
-  }
   .w-119\.25 {
     width: calc(var(--spacing) * 119.25);
   }
-  .w-\[5\%\] {
-    width: 5%;
-  }
   .w-\[108px\] {
     width: 108px;
-  }
-  .w-\[255px\] {
-    width: 255px;
   }
   .w-\[262px\] {
     width: 262px;
@@ -463,26 +376,8 @@
   .w-full {
     width: 100%;
   }
-  .max-w-3 {
-    max-width: calc(var(--spacing) * 3);
-  }
-  .max-w-3\/5 {
-    max-width: calc(3/5 * 100%);
-  }
-  .max-w-64 {
-    max-width: calc(var(--spacing) * 64);
-  }
   .max-w-64\.25 {
     max-width: calc(var(--spacing) * 64.25);
-  }
-  .max-w-105 {
-    max-width: calc(var(--spacing) * 105);
-  }
-  .max-w-105\.25 {
-    max-width: calc(var(--spacing) * 105.25);
-  }
-  .max-w-214 {
-    max-width: calc(var(--spacing) * 214);
   }
   .max-w-214\.75 {
     max-width: calc(var(--spacing) * 214.75);
@@ -508,14 +403,8 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .shrink-0 {
     flex-shrink: 0;
-  }
-  .border-collapse {
-    border-collapse: collapse;
   }
   .rotate-\[25deg\] {
     rotate: 25deg;
@@ -526,20 +415,11 @@
   .cursor-pointer {
     cursor: pointer;
   }
-  .resize {
-    resize: both;
-  }
   .list-disc {
     list-style-type: disc;
   }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
-  }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-  .grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -552,9 +432,6 @@
   }
   .items-stretch {
     align-items: stretch;
-  }
-  .gap-1 {
-    gap: calc(var(--spacing) * 1);
   }
   .gap-1\.5 {
     gap: calc(var(--spacing) * 1.5);
@@ -580,23 +457,14 @@
   .gap-7 {
     gap: calc(var(--spacing) * 7);
   }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
   .gap-10 {
     gap: calc(var(--spacing) * 10);
-  }
-  .gap-11 {
-    gap: calc(var(--spacing) * 11);
   }
   .gap-11\.75 {
     gap: calc(var(--spacing) * 11.75);
   }
   .gap-16 {
     gap: calc(var(--spacing) * 16);
-  }
-  .gap-30 {
-    gap: calc(var(--spacing) * 30);
   }
   .space-y-1 {
     :where(& > :not(:last-child)) {
@@ -640,20 +508,6 @@
       margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
-  .space-y-8 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 8) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
-  .space-y-15 {
-    :where(& > :not(:last-child)) {
-      --tw-space-y-reverse: 0;
-      margin-block-start: calc(calc(var(--spacing) * 15) * var(--tw-space-y-reverse));
-      margin-block-end: calc(calc(var(--spacing) * 15) * calc(1 - var(--tw-space-y-reverse)));
-    }
-  }
   .overflow-hidden {
     overflow: hidden;
   }
@@ -681,9 +535,6 @@
   }
   .bg-brand-dark {
     background-color: var(--color-brand-dark);
-  }
-  .bg-brand-whitish {
-    background-color: var(--color-brand-whitish);
   }
   .bg-brand-whitish\/5 {
     background-color: color-mix(in srgb, #d9d9d9 5%, transparent);
@@ -727,17 +578,8 @@
   .p-3 {
     padding: calc(var(--spacing) * 3);
   }
-  .p-6 {
-    padding: calc(var(--spacing) * 6);
-  }
   .p-8 {
     padding: calc(var(--spacing) * 8);
-  }
-  .p-9 {
-    padding: calc(var(--spacing) * 9);
-  }
-  .p-10 {
-    padding: calc(var(--spacing) * 10);
   }
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
@@ -757,41 +599,14 @@
   .px-7 {
     padding-inline: calc(var(--spacing) * 7);
   }
-  .px-10 {
-    padding-inline: calc(var(--spacing) * 10);
-  }
-  .px-12 {
-    padding-inline: calc(var(--spacing) * 12);
-  }
-  .px-13 {
-    padding-inline: calc(var(--spacing) * 13);
-  }
-  .px-13\.5 {
-    padding-inline: calc(var(--spacing) * 13.5);
-  }
   .py-5 {
     padding-block: calc(var(--spacing) * 5);
   }
   .py-9 {
     padding-block: calc(var(--spacing) * 9);
   }
-  .py-10 {
-    padding-block: calc(var(--spacing) * 10);
-  }
-  .py-16 {
-    padding-block: calc(var(--spacing) * 16);
-  }
-  .py-16\.75 {
-    padding-block: calc(var(--spacing) * 16.75);
-  }
   .py-20 {
     padding-block: calc(var(--spacing) * 20);
-  }
-  .py-25 {
-    padding-block: calc(var(--spacing) * 25);
-  }
-  .py-25\.75 {
-    padding-block: calc(var(--spacing) * 25.75);
   }
   .pt-4 {
     padding-top: calc(var(--spacing) * 4);
@@ -808,32 +623,11 @@
   .pt-20 {
     padding-top: calc(var(--spacing) * 20);
   }
-  .pt-28 {
-    padding-top: calc(var(--spacing) * 28);
-  }
   .pt-36 {
     padding-top: calc(var(--spacing) * 36);
   }
-  .pt-37 {
-    padding-top: calc(var(--spacing) * 37);
-  }
-  .pt-37\.5 {
-    padding-top: calc(var(--spacing) * 37.5);
-  }
-  .pt-68 {
-    padding-top: calc(var(--spacing) * 68);
-  }
-  .pr-27 {
-    padding-right: calc(var(--spacing) * 27);
-  }
-  .pr-27\.5 {
-    padding-right: calc(var(--spacing) * 27.5);
-  }
   .pb-8 {
     padding-bottom: calc(var(--spacing) * 8);
-  }
-  .pb-10 {
-    padding-bottom: calc(var(--spacing) * 10);
   }
   .pb-18 {
     padding-bottom: calc(var(--spacing) * 18);
@@ -841,37 +635,11 @@
   .pb-20 {
     padding-bottom: calc(var(--spacing) * 20);
   }
-  .pb-96 {
-    padding-bottom: calc(var(--spacing) * 96);
-  }
-  .pl-35 {
-    padding-left: calc(var(--spacing) * 35);
-  }
   .text-center {
     text-align: center;
   }
   .font-sf {
     font-family: var(--font-sf);
-  }
-  .text-2xl {
-    font-size: var(--text-2xl);
-    line-height: var(--tw-leading, var(--text-2xl--line-height));
-  }
-  .text-2xl\/9 {
-    font-size: var(--text-2xl);
-    line-height: calc(var(--spacing) * 9);
-  }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
-  }
-  .text-\[36px\]\/\[1\.2\] {
-    font-size: 36px;
-    line-height: 1.2;
-  }
-  .text-\[64px\]\/20 {
-    font-size: 64px;
-    line-height: calc(var(--spacing) * 20);
   }
   .text-sm {
     font-size: var(--text-sm);
@@ -901,9 +669,6 @@
   .text-\[10px\] {
     font-size: 10px;
   }
-  .text-\[15px\] {
-    font-size: 15px;
-  }
   .text-\[17px\] {
     font-size: 17px;
   }
@@ -913,20 +678,8 @@
   .text-\[28px\] {
     font-size: 28px;
   }
-  .text-\[32px\] {
-    font-size: 32px;
-  }
   .text-\[34px\] {
     font-size: 34px;
-  }
-  .text-\[36px\] {
-    font-size: 36px;
-  }
-  .text-\[40px\] {
-    font-size: 40px;
-  }
-  .text-\[64px\] {
-    font-size: 64px;
   }
   .leading-\[1\.2\] {
     --tw-leading: 1.2;
@@ -979,9 +732,6 @@
   .text-white {
     color: var(--color-white);
   }
-  .underline {
-    text-decoration-line: underline;
-  }
   .shadow-consultation {
     --tw-shadow: 0px 0px 68px 0px var(--tw-shadow-color, #ffffff0a) inset;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -994,10 +744,6 @@
     --tw-shadow: 0px 0px 68px 0px var(--tw-shadow-color, #ffffff0d) inset;
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
-  }
   .backdrop-blur-2xl {
     --tw-backdrop-blur: blur(var(--blur-2xl));
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
@@ -1005,10 +751,6 @@
   }
   .backdrop-blur-\[48px\] {
     --tw-backdrop-blur: blur(48px);
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
   }
@@ -1048,11 +790,6 @@
       height: calc(var(--spacing) * 26);
     }
   }
-  .xs\:grid-cols-2 {
-    @media (width >= 480px) {
-      grid-template-columns: repeat(2, minmax(0, 1fr));
-    }
-  }
   .xs\:text-base {
     @media (width >= 480px) {
       font-size: var(--text-base);
@@ -1075,11 +812,6 @@
       margin-top: calc(var(--spacing) * 7);
     }
   }
-  .sm\:aspect-auto {
-    @media (width >= 640px) {
-      aspect-ratio: auto;
-    }
-  }
   .sm\:size-5 {
     @media (width >= 640px) {
       width: calc(var(--spacing) * 5);
@@ -1096,12 +828,6 @@
     @media (width >= 640px) {
       width: calc(var(--spacing) * 20);
       height: calc(var(--spacing) * 20);
-    }
-  }
-  .sm\:size-26 {
-    @media (width >= 640px) {
-      width: calc(var(--spacing) * 26);
-      height: calc(var(--spacing) * 26);
     }
   }
   .sm\:size-59 {
@@ -1151,11 +877,6 @@
       width: calc(var(--spacing) * 80);
     }
   }
-  .sm\:grid-cols-3 {
-    @media (width >= 640px) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
   .sm\:gap-3 {
     @media (width >= 640px) {
       gap: calc(var(--spacing) * 3);
@@ -1174,11 +895,6 @@
   .sm\:rounded-2xl {
     @media (width >= 640px) {
       border-radius: var(--radius-2xl);
-    }
-  }
-  .sm\:rounded-3xl {
-    @media (width >= 640px) {
-      border-radius: var(--radius-3xl);
     }
   }
   .sm\:border {
@@ -1229,18 +945,6 @@
       line-height: var(--tw-leading, var(--text-4xl--line-height));
     }
   }
-  .sm\:text-5xl {
-    @media (width >= 640px) {
-      font-size: var(--text-5xl);
-      line-height: var(--tw-leading, var(--text-5xl--line-height));
-    }
-  }
-  .sm\:text-\[36px\]\/\[1\.2\] {
-    @media (width >= 640px) {
-      font-size: 36px;
-      line-height: 1.2;
-    }
-  }
   .sm\:text-base {
     @media (width >= 640px) {
       font-size: var(--text-base);
@@ -1265,12 +969,6 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
-  .sm\:text-xs {
-    @media (width >= 640px) {
-      font-size: var(--text-xs);
-      line-height: var(--tw-leading, var(--text-xs--line-height));
-    }
-  }
   .sm\:text-\[15px\] {
     @media (width >= 640px) {
       font-size: 15px;
@@ -1279,11 +977,6 @@
   .sm\:text-\[40px\] {
     @media (width >= 640px) {
       font-size: 40px;
-    }
-  }
-  .md\:grid-cols-3 {
-    @media (width >= 768px) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .md\:px-20 {
@@ -1303,12 +996,6 @@
       line-height: var(--tw-leading, var(--text-lg--line-height));
     }
   }
-  .md\:text-sm {
-    @media (width >= 768px) {
-      font-size: var(--text-sm);
-      line-height: var(--tw-leading, var(--text-sm--line-height));
-    }
-  }
   .md\:text-xl {
     @media (width >= 768px) {
       font-size: var(--text-xl);
@@ -1325,21 +1012,10 @@
       display: block;
     }
   }
-  .lg\:size-59 {
-    @media (width >= 1280px) {
-      width: calc(var(--spacing) * 59);
-      height: calc(var(--spacing) * 59);
-    }
-  }
   .lg\:size-auto {
     @media (width >= 1280px) {
       width: auto;
       height: auto;
-    }
-  }
-  .lg\:h-8\/12 {
-    @media (width >= 1280px) {
-      height: calc(8/12 * 100%);
     }
   }
   .lg\:h-14 {
@@ -1418,12 +1094,6 @@
     @media (width >= 1280px) {
       font-size: 36px;
       line-height: 1.2;
-    }
-  }
-  .lg\:text-base {
-    @media (width >= 1280px) {
-      font-size: var(--text-base);
-      line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
   .lg\:text-lg {
@@ -1683,12 +1353,6 @@
       line-height: var(--tw-leading, var(--text-2xl--line-height));
     }
   }
-  .xl\:text-lg {
-    @media (width >= 80rem) {
-      font-size: var(--text-lg);
-      line-height: var(--tw-leading, var(--text-lg--line-height));
-    }
-  }
   .xl\:text-xl {
     @media (width >= 80rem) {
       font-size: var(--text-xl);
@@ -1841,11 +1505,6 @@
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-backdrop-blur {
   syntax: "*";
   inherits: false;
@@ -1912,7 +1571,6 @@
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
