--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@
     #d6ad4f 100%
   );
 
-  --background-image-union: url("/public/assets/images/union.png");
+  --background-image-union: url("./public/assets/images/union.png");
 
   --blur-consulatation: blur(48px);
   --shadow-consultation: 0px 0px 68px 0px #ffffff0a inset;
