--- a/public/style.css
+++ b/public/style.css
@@ -361,6 +361,12 @@
   .h-150 {
     height: calc(var(--spacing) * 150);
   }
+  .h-\[31\.25rem\] {
+    height: 31.25rem;
+  }
+  .h-\[37\.5rem\] {
+    height: 37.5rem;
+  }
   .h-\[68px\] {
     height: 68px;
   }
@@ -867,6 +873,12 @@
       line-height: var(--tw-leading, var(--text-base--line-height));
     }
   }
+  .xs\:text-sm {
+    @media (width >= 480px) {
+      font-size: var(--text-sm);
+      line-height: var(--tw-leading, var(--text-sm--line-height));
+    }
+  }
   .xs\:text-xl {
     @media (width >= 480px) {
       font-size: var(--text-xl);
@@ -1198,6 +1210,12 @@
       padding-top: calc(var(--spacing) * 20);
     }
   }
+  .lg\:text-2xl {
+    @media (width >= 1280px) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
   .lg\:text-4xl {
     @media (width >= 1280px) {
       font-size: var(--text-4xl);
@@ -1303,6 +1321,11 @@
   .\32 xl\:h-auto {
     @media (width >= 1440px) {
       height: auto;
+    }
+  }
+  .\32 xl\:max-h-\[47\.5rem\] {
+    @media (width >= 1440px) {
+      max-height: 47.5rem;
     }
   }
   .\32 xl\:w-auto {
@@ -1492,6 +1515,11 @@
     @media (width >= 80rem) {
       font-size: var(--text-xl);
       line-height: var(--tw-leading, var(--text-xl--line-height));
+    }
+  }
+  .xl\:text-\[32px\] {
+    @media (width >= 80rem) {
+      font-size: 32px;
     }
   }
 }
